# se-toolkit-hackathon

./: .env.example  .env.prod.example  Caddyfile  Caddyfile.prod  DEPLOY.md  IMPLEMENTATION_PLAN.md  README.md  WIKI.md  docker-compose.prod.yml  docker-compose.yml
.qwen/: settings.json  settings.json.orig
backend/: Dockerfile  Dockerfile.prod  alembic.ini  embed_docs.py  requirements.txt  test_rag.py  test_rag_edge_cases.py  test_rag_integration.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4a95a59a5d41_initial_migration_create_user_question_.py  a1b2c3d4e5f7_add_chunk_index_and_num_chunks_to_lab_doc.py  a2b3c4d5e6f7_add_reasoning_time_seconds_to_answer.py  b3c4d5e6f7a8_add_ai_reasoning_time_to_question.py  d8e4f2b1c3a5_add_embedding_column_to_question_table.py  e9f5a3b2d4c6_add_edited_column_to_answer_table.py  f1a2b3c4d5e6_add_hidden_column_to_question_table.py
backend/app/: __main__.py  config.py  database.py  main.py  middleware.py
backend/app/api/: answers.py  auth.py  questions.py  stats.py  ta_review.py
backend/app/models/: models.py  schemas.py
backend/app/services/: auth.py  chunker.py  dependencies.py  logging.py  rag.py
backend/seed/: __main__.py  ingest_github.py
frontend/: Dockerfile  Dockerfile.prod
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerCard.tsx  Navbar.tsx  QuestionCard.tsx
frontend/src/pages/: AskQuestion.tsx  QuestionDetail.tsx  QuestionsList.tsx  Stats.tsx  TAQueue.tsx
frontend/src/styles/: global.css
frontend/src/types/: index.ts
qwen-code-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  plan.md  pyproject.toml  sys-prompt.txt
qwen-code-api/scripts/: compare_requests.py
qwen-code-api/src/qwen_code_api/: auth.py  config.py  headers.py  logging_config.py  main.py  models.py
qwen-code-api/src/qwen_code_api/routes/: chat.py  health.py  models.py
qwen-code-api/src/qwen_code_api/utils/: __init__.py  live_logger.py  message_transform.py
scripts/: check-qwen-oauth-expiry.sh  rechunk_docs.py  refresh-qwen-oauth.sh
