[project]
name = "qwen-code-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "httpx>=0.28.1",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "pydantic-settings>=2.0.0",
]

# TODO sync lock with parent repo
# https://github.com/astral-sh/uv/issues/9150
[dependency-groups]
dev = [
    "mitmproxy>=12.0.0",
    "poethepoet==0.42.1",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.8",
    "ty==0.0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_code_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tasks

[tool.poe.tasks.check]
help = "Format, lint, typecheck"
sequence = ["format", "lint", "typecheck"]

## Tasks - Typecheck

[tool.poe.tasks.typecheck]
help = "Run all typecheckers"
sequence = ["ty-check", "pyright-check"]

[tool.poe.tasks.ty-check]
help = "Run the 'ty' typechecker"
cmd = "ty check"

## Tasks - Typecheck

[tool.poe.tasks.pyright-check]
help = "Run the 'pyright' typechecker"
cmd = "pyright"

## Tasks - Lint

[tool.poe.tasks.lint]
help = "Run the 'ruff' linter"
cmd = "ruff check"

## Tasks - Compare requests

[tool.poe.tasks.compare-requests]
help = "Compare proxy requests against real Qwen Code CLI"
cmd = "python scripts/compare_requests.py"

## Tasks - Format

[tool.poe.tasks.format]
help = "Run the 'ruff' formatter"
cmd = "ruff format"

# Tool configuration

[tool.pyright]
include = ["src/qwen_code_api"]
exclude = ["**/__pycache__", "**/node_modules", "**/.*", ".venv", ".direnv"]
typeCheckingMode = "strict"
reportAssignmentType = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownMemberType = "none"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ty.src]
include = ["src/qwen_code_api"]

# TODO: remove after upgrading to ty>=0.0.26 (fixes ParamSpec, see https://github.com/astral-sh/ty/issues/1635)
[tool.ty.rules]
invalid-argument-type = "warn"
